--- a/KhaiBaoYTeKiosk/Resources/CustomElement/PlaceholderPasswordBox.xaml
+++ b/KhaiBaoYTeKiosk/Resources/CustomElement/PlaceholderPasswordBox.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="KhaiBaoYTeKiosk.CustomControl.PlaceholderPasswordBox"
+﻿<UserControl x:Class="KhaiBaoYTeKiosk.Resources.CustomElement.PlaceholderPasswordBox"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:KhaiBaoYTeKiosk.CustomControl" 
+             xmlns:local="clr-namespace:KhaiBaoYTeKiosk.Resources.CustomElement" 
              mc:Ignorable="d" 
              Name="Root"
              d:DesignHeight="450" d:DesignWidth="800">
@@ -12,6 +12,7 @@
                  VerticalAlignment="{Binding Path=VerticalAlignment, ElementName=Root}"
                  HorizontalAlignment="{Binding Path=HorizontalAlignment, ElementName=Root}"
                  HorizontalContentAlignment="{Binding Path=HorizontalContentAlignment, ElementName=Root}"
+                 VerticalContentAlignment="{Binding Path=VerticalContentAlignment, ElementName=Root}"
                  Width="{Binding Path=Width,ElementName=Root}"
                  BorderThickness="0" BorderBrush="Transparent" FontSize="24" Background="Transparent"
                                            Visibility="Collapsed"/>
@@ -21,6 +22,7 @@
                  VerticalAlignment="{Binding Path=VerticalAlignment, ElementName=Root}" BorderThickness="0" BorderBrush="Transparent" 
                  HorizontalAlignment="{Binding Path=HorizontalAlignment, ElementName=Root}"
                  HorizontalContentAlignment="{Binding Path=HorizontalContentAlignment, ElementName=Root}"
+                 VerticalContentAlignment="{Binding Path=VerticalContentAlignment, ElementName=Root}"
                  Width="{Binding Path=Width,ElementName=Root}"
                  FontSize="24" Background="Transparent" />
     </Grid>
