--- a/KhaiBaoYTeKiosk/Resources/CustomElement/PlaceholderTextBox.xaml
+++ b/KhaiBaoYTeKiosk/Resources/CustomElement/PlaceholderTextBox.xaml
@@ -1,19 +1,20 @@
-﻿<UserControl x:Class="KhaiBaoYTeKiosk.CustomControl.PlaceholderTextBox"
+﻿<UserControl x:Class="KhaiBaoYTeKiosk.Resources.CustomElement.PlaceholderTextBox"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="KhaiBaoYTeKiosk.CustomControl"
+             xmlns:local="KhaiBaoYTeKiosk.Resources.CustomElement"
              x:Name="Root"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        <TextBox Name="InputBox" LostFocus="InputBox_LostFocus"  Text="{Binding Text, ElementName=Root}"
+        <TextBox Name="InputBox" LostFocus="InputBox_LostFocus"  Text="{Binding Text, ElementName=Root, UpdateSourceTrigger=PropertyChanged}"
                  VerticalAlignment="{Binding Path=VerticalAlignment, ElementName=Root}"
                  HorizontalAlignment="{Binding Path=HorizontalAlignment, ElementName=Root}"
                  HorizontalContentAlignment="{Binding Path=HorizontalContentAlignment, ElementName=Root}"
                  VerticalContentAlignment="{Binding Path=VerticalContentAlignment, ElementName=Root}"
                  Width="{Binding Path=Width,ElementName=Root}"
+                 MaxWidth="{Binding ElementName=Root,Path=ActualWidth}"
                  BorderThickness="0" BorderBrush="Transparent" FontSize="24" Background="Transparent" />
         <TextBox Name="PlaceholderBox" GotFocus="PlaceholderBox_GotFocus" 
                  Text="{Binding PlaceholderText, ElementName=Root}"
@@ -22,6 +23,7 @@
                  HorizontalAlignment="{Binding Path=HorizontalAlignment, ElementName=Root}"
                  HorizontalContentAlignment="{Binding Path=HorizontalContentAlignment, ElementName=Root}"
                  Width="{Binding Path=Width,ElementName=Root}"
+                 MaxWidth="{Binding ElementName=Root,Path=ActualWidth}"
                  FontSize="24" Background="Transparent" />
     </Grid>
 </UserControl>
