--- a/KhaiBaoYTeKiosk/Views/QRCheckinView.xaml
+++ b/KhaiBaoYTeKiosk/Views/QRCheckinView.xaml
@@ -1,12 +1,12 @@
-﻿<UserControl x:Class="KhaiBaoYTeKiosk.Views.QRCheckinView"
+﻿<UserControl x:Name="keyboard" x:Class="KhaiBaoYTeKiosk.Views.QRCheckinView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:KhaiBaoYTeKiosk.Views"
-             xmlns:custom="clr-namespace:KhaiBaoYTeKiosk.CustomControl"
+             xmlns:custom="clr-namespace:KhaiBaoYTeKiosk.Resources.CustomElement"
              mc:Ignorable="d" 
-             d:Height="720" Width="1280" Style="{StaticResource CustomFont}">
+             Style="{StaticResource CustomFont}" Loaded="keyboard_Loaded">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
@@ -19,7 +19,7 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <Grid Grid.Row="1" Grid.Column="1" Width="900">
+        <Grid Grid.Row="1" Grid.Column="1" Width="1080">
             <Grid.OpacityMask>
                 <VisualBrush Visual="{Binding ElementName=Border1}" />
             </Grid.OpacityMask>
@@ -60,18 +60,20 @@
                     </Button>
                 </Grid>
                 <StackPanel Background="White">
-                    <Image Margin="0 10" Height="187" Source="/Resources/Images/img_scan.png"/>
+                    <Image Margin="0 10" Height="240" Source="/Resources/Images/img_scan.png"/>
                     <TextBlock Margin="0 10" HorizontalAlignment="Center" 
                                FontSize="24"  Foreground="#007dd1" >
                         Vui lòng quét QR Code vào máy đọc để check in
                     </TextBlock>
-                    <Border Width="600" Margin="0 10" 
+                    <Border Width="600" Margin="0 30 0 10" 
                             BorderBrush="Gray" Opacity="0.6" BorderThickness="1" CornerRadius="5">
-                        <custom:PlaceholderTextBox  PlaceholderText="QUÉT QR CODE ĐÃ KHAI BÁO" 
+                        <custom:PlaceholderScannerTextBox  PlaceholderText="QUÉT QR CODE ĐÃ KHAI BÁO" 
                                                     Margin="5 8" HorizontalContentAlignment="Center"
-                                                    Width="560" HorizontalAlignment="Center"/>
+                                                    Width="560" HorizontalAlignment="Center"
+                                                    Text="{Binding Path=ScannedCode, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                                    x:Name="ScannerBox"/>
                     </Border>
-                    <StackPanel Margin="0 5" Orientation="Horizontal" HorizontalAlignment="Center">
+                    <StackPanel Margin="0 5" Orientation="Horizontal" HorizontalAlignment="Center" Visibility="Collapsed">
                         <TextBlock FontSize="24"  Foreground="#007dd1" VerticalAlignment="Center">
                             Cài đặt địa điểm check in thì nhấn vào
                         </TextBlock>
@@ -84,12 +86,18 @@
                             </Button.Resources>
                         </Button>
                     </StackPanel>
-                    <TextBlock HorizontalAlignment="Center"
+                    <TextBlock HorizontalAlignment="Center" Visibility="Collapsed"
                                FontSize="14" FontWeight="DemiBold" Foreground="#FF7FBC21">
                         [Địa điểm]
                     </TextBlock>
-                    <Grid Height="100"/>
+                    <TextBlock Text="{Binding Path=ErrorMessage,Mode=OneWay}" 
+                               HorizontalAlignment="Center" 
+                               Foreground="Red"
+                               FontSize="16"
+                               Margin="0 0 0 60"/>
+
                 </StackPanel>
+
             </StackPanel>
         </Grid>
     </Grid>
